[package]
name = "gift"
version = "0.3.0"
authors = ["Doug Lau <doug.p.lau@gmail.com>"]
description = "A library for reading and writing GIF images"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gift"
homepage = "https://github.com/DougLau/gift"
repository = "https://github.com/DougLau/gift"
readme = "README.md"
keywords = ["gif", "image"]
categories = ["encoding"]
edition = "2018"

[dependencies]
log = "0.4"
lzw = "0.10"
pix = "0.6"

# NOTE: for cmd only -- lib has no optional features
termcolor = { version = "1.0.4", optional = true }

[dev-dependencies]
env_logger = "0.6.1"

[features]
cmd = ["termcolor"]

[[bin]]
name = "gift"
required-features = ["cmd"]
