[package]
name = "gift"
version = "0.4.0"
authors = ["Doug Lau <doug.p.lau@gmail.com>"]
description = "A library for reading and writing GIF images"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/gift"
readme = "README.md"
keywords = ["gif", "image"]
categories = ["multimedia", "encoding"]
edition = "2018"

[dependencies]
log = "0.4"
lzw = "0.10"
pix = "0.7"

# NOTE: for cmd only -- library has no optional features
clap = { version = "2.33", optional = true }
env_logger = { version = "0.7", optional = true }
termcolor = { version = "1", optional = true }

[dev-dependencies]
bencher = "0.1"

[features]
cmd = ["clap", "env_logger", "termcolor"]

[[bin]]
name = "gift"
required-features = ["cmd"]

[[bench]]
name = "decode"
harness = false
